--- a/RentAMovie/Views/_ViewImports.cshtml
+++ b/RentAMovie/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using RentAMovie.Models.Home
 @using RentAMovie.Models.Search
 @using RentAMovie.Models.Review
+@using RentAMovie.Models.Genre
 @using RentAMovie.Data.Models
 @using RentAMovie.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
