--- a/RentAMovie/Views/Movie/Popular.cshtml
+++ b/RentAMovie/Views/Movie/Popular.cshtml
@@ -1,9 +1,9 @@
-﻿@model FilterMovieModel
+﻿@model List<PopularMovieResultModule>
 @{
 	ViewData["Title"] = "Popular";
 }
 
-<partial name="~/Views/Shared/Movie/_MovieFilters.cshtml" />
+<h3>What's Popular</h3>
 
 <partial name="~/Views/Shared/Movie/_MovieList.cshtml" />
 
