--- a/RentAMovie/Views/Movie/TopRated.cshtml
+++ b/RentAMovie/Views/Movie/TopRated.cshtml
@@ -3,7 +3,7 @@
 	ViewData["Title"] = "Top Rated";
 }
 
-<partial name="~/Views/Shared/Movie/_MovieFilters.cshtml" />
+<h3>Top rated of all time</h3>
 
 <partial name="~/Views/Shared/Movie/_MovieList.cshtml" />
 
