--- a/RentAMovie/Views/Search/Index.cshtml
+++ b/RentAMovie/Views/Search/Index.cshtml
@@ -14,8 +14,8 @@
 				<option selected>Select</option>
 				<option value="1">Rating Descending</option>
 				<option value="2">Rating Ascending</option>
-				<option value="3">Popularity Descending</option>
-				<option value="4">Popularity Ascending</option>
+				@*<option value="3">Popularity Descending</option>
+				<option value="4">Popularity Ascending</option>*@
 				<option value="5">Release Date Descending</option>
 				<option value="6">Release Date Ascending</option>
 				<option value="7">Title (A-Z)</option>
@@ -137,60 +137,3 @@
 	<link rel="stylesheet" href="~/css/search.css" />
 	<link rel="stylesheet" href="~/css/movies.css" />
 }
-
-	@*<select asp-for="SearchGenre" class="filters">
-		<option class="filter-item">
-			<p>Action</p>
-		</option>
-		<option class="filter-item">
-			<p>Adventure</p>
-		</option>
-		<option class="filter-item">
-			<p>Animation</p>
-		</option>
-		<option class="filter-item">
-			<p>Comedy</p>
-		</option>
-		<option class="filter-item">
-			<p>Crime</p>
-		</option>
-		<option class="filter-item">
-			<p>Documentary</p>
-		</option>
-		<option class="filter-item">
-			<p>Drama</p>
-		</option>
-		<option class="filter-item">
-			<p>Fantasy</p>
-		</option>
-		<option class="filter-item">
-			<p>History</p>
-		</option>
-		<option class="filter-item">
-			<p>Horror</p>
-		</option>
-		<option class="filter-item">
-			<p>Mystery</p>
-		</option>
-		<option class="filter-item">
-			<p>Romance</p>
-		</option>
-		<option class="filter-item">
-			<p>Science Fiction</p>
-		</option>
-		<option class="filter-item">
-			<p>Thriller</p>
-		</option>
-		<option class="filter-item">
-			<p>War</p>
-		</option>
-		<option class="filter-item">
-			<p>Western</p>
-		</option>
-		<option class="filter-item">
-			<p>Popular</p>
-		</option>
-		<option class="filter-item">
-			<p>Top rated</p>
-		</option>
-	</select>*@
