--- a/RentAMovie/wwwroot/css/search.css
+++ b/RentAMovie/wwwroot/css/search.css
@@ -63,3 +63,14 @@
     border-radius: 5px;
     background-color: #6c757d8b;
 }
+
+.search-section {
+    width: 50%;
+    margin-bottom: 5px;
+}
+
+.search-section p {
+    margin: 0 0 0 5px;
+    font-weight: 500;
+    font-size: 1.1rem;
+}
