--- a/RentAMovie/Views/Search/Index.cshtml
+++ b/RentAMovie/Views/Search/Index.cshtml
@@ -7,34 +7,41 @@
 
 <div class="search-bar">
 	<form method="get" autocomplete="off">
-		<input asp-for="SearchTerm" class="form-control" />
-		<div class="search-section">
-			<p>Sort by</p>
-			<select class="form-select" asp-for="SortBy">
-				<option selected>Select</option>
-				<option value="1">Rating Descending</option>
-				<option value="2">Rating Ascending</option>
-				@*<option value="3">Popularity Descending</option>
-				<option value="4">Popularity Ascending</option>*@
-				<option value="5">Release Date Descending</option>
-				<option value="6">Release Date Ascending</option>
-				<option value="7">Title (A-Z)</option>
-				<option value="8">Title (Z-A)</option>
-				<option value="9">Number Of Votes Descending</option>
-				<option value="10">Number Of Votes Ascending</option>
-			</select>
+		<div class="search">
+			<input asp-for="SearchTerm" class="form-control" />
+			<div class="search-btns">
+				<input type="submit" value="Search" class="btn btn-primary" />
+				<input type="submit" value="Reset" class="btn btn-secondary" />
+			</div>
 		</div>
-		<div class="search-section">
-			<p>Genre</p>
-			<select class="form-select" asp-for="Genre">
-				<option selected>Select</option>
-				@foreach (var genre in Model.AvailableGenres)
-				{
-					<option value="@genre.Id">@genre.Name</option>
-				}
-			</select>
+		<div class="filters">
+			<div class="filter-section">
+				<p>Sort by</p>
+				<select class="form-select" asp-for="SortBy">
+					<option selected>Select</option>
+					<option value="1">Rating Descending</option>
+					<option value="2">Rating Ascending</option>
+					@*<option value="3">Popularity Descending</option>
+					<option value="4">Popularity Ascending</option>*@
+					<option value="5">Release Date Descending</option>
+					<option value="6">Release Date Ascending</option>
+					<option value="7">Title (A-Z)</option>
+					<option value="8">Title (Z-A)</option>
+					<option value="9">Number Of Votes Descending</option>
+					<option value="10">Number Of Votes Ascending</option>
+				</select>
+			</div>
+			<div class="filter-section">
+				<p>Genre</p>
+				<select class="form-select" asp-for="Genre">
+					<option selected>Select</option>
+					@foreach (var genre in Model.AvailableGenres)
+					{
+						<option value="@genre.Id">@genre.Name</option>
+					}
+				</select>
+			</div>
 		</div>
-		<input type="submit" value="Search" />
 	</form>
 </div>
 <div class="result">
