--- a/RentAMovie/wwwroot/css/search.css
+++ b/RentAMovie/wwwroot/css/search.css
@@ -1,8 +1,4 @@
-﻿input {
-    font-size: 1.6rem !important;
-}
-
-.row {
+﻿.row {
     margin-top: 30px;
 }
 
@@ -19,7 +15,65 @@
     user-select: none;
 }
 
+.search {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.search-btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.search input[type="text"] {
+    font-size: 1.6rem !important;
+}
+
+.search input[type="submit"] {
+    height: 46px;
+}
+
 .filters {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.filter-section {
+    width: 50%;
+    margin-bottom: 5px;
+}
+
+.filter-section p {
+    margin: 0 0 0 5px;
+    font-weight: 500;
+    font-size: 1.1rem;
+}
+
+@media screen and (max-width: 576px) {
+    .search {
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .search-btns,
+    .search input[type="text"],
+    .search input[type="submit"]{
+        width: 100%;
+    }
+
+    .filters {
+        gap: 5px;
+        margin-top: 5px;
+    }
+}
+
+/*.filters {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -41,13 +95,13 @@
     border: 2px solid #000;
 }
 
-.filter-item p {
-    margin: 0;
-}
+    .filter-item p {
+        margin: 0;
+    }
 
-.filter-item:hover {
-    border: 2px solid #6fc2ff
-}
+    .filter-item:hover {
+        border: 2px solid #6fc2ff
+    }
 
 .filters::-webkit-scrollbar-track {
     padding: 2px 0;
@@ -62,15 +116,4 @@
     height: 2px;
     border-radius: 5px;
     background-color: #6c757d8b;
-}
-
-.search-section {
-    width: 50%;
-    margin-bottom: 5px;
-}
-
-.search-section p {
-    margin: 0 0 0 5px;
-    font-weight: 500;
-    font-size: 1.1rem;
-}
+}*/
