Styling and animating

--- a/RentAMovie/Views/Search/Index.cshtml
+++ b/RentAMovie/Views/Search/Index.cshtml
@@ -138,3 +138,6 @@
 	<link rel="stylesheet" href="~/css/search.css" />
 	<link rel="stylesheet" href="~/css/movies.css" />
 }
+@section Scripts {
+    <script src="~/js/search/search.js"></script>
+}
