--- a/RentAMovie/Views/Home/Index.cshtml
+++ b/RentAMovie/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     bool firstSlide = true;
 }
 
-<div style="background-color: #ff6459;">
+<div style="background-color: #ff6459; border-radius: 5px;">
     @if (TempData["error"] != null)
     {
         <p style="text-align: center; color: #f2f2f2; padding: 5px; font-size: 1.1rem;">@TempData["error"]</p>
@@ -77,56 +77,9 @@
         <h5>Registered Users</h5>
         <p>@Model.TotalUsers</p>
     </div>
+    <span class="statistics-shadow"></span>
 </div>
 
 @section Styles {
     <link rel="stylesheet" href="~/css/home.css" />
 }
-@*Small carouse for the movies*@
-@*<div id="carouselExampleCaptions" class="carousel slide small" data-bs-ride="false">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    </div>
-    <div class="carousel-inner">
-        @foreach (var movie in Model.TopActionMovies)
-        {
-                if (firstSlide == true)
-                {
-                    firstSlide = false;
-                    <div class="carousel-item active">
-                    <div class="carouselImg small" style="background-image: url(@(posterPath + movie.PosterPath))"></div>
-                        <div class="carousel-caption d-none d-md-block">
-                            <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-                                <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
-                            </a>
-                            <p>@movie.Description.Substring(0, movie.Description.Length / 2)...</p>
-                        </div>
-                    </div>
-                }
-                else
-                {
-                    <div class="carousel-item">
-                        <div class="carouselImg small" style="background-image: url(@(posterPath + movie.PosterPath))"></div>
-                        <div class="carousel-caption d-none d-md-block">
-                            <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-                                <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
-                            </a>
-                            <p>@movie.Description.Substring(0, movie.Description.Length / 2)...</p>
-                        </div>
-                    </div>
-                }
-        }
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>*@
