--- a/RentAMovie/Views/Shared/_LoginPartial.cshtml
+++ b/RentAMovie/Views/Shared/_LoginPartial.cshtml
@@ -5,12 +5,21 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello 
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Hello 
             @(User.Identity != null && User.Identity.Name != null ? 
             User.Identity.Name :
-            "User")!
+            "User")
         </a>
+        <ul id="nav-dropdown" class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+            <li>
+                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Create">Add Movie</a>
+            </li>
+        </ul>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
