--- a/RentAMovie/Views/Shared/Movie/_MovieForm.cshtml
+++ b/RentAMovie/Views/Shared/Movie/_MovieForm.cshtml
@@ -51,17 +51,17 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Poster" class="control-label"></label>
-                    <input asp-for="Poster" class="form-control" />
+                    <input asp-for="Poster" class="form-control" onclick="this.select();" />
                     <span asp-validation-for="Poster" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Backdrop" class="control-label"></label>
-                    <input asp-for="Backdrop" class="form-control" />
+                    <input asp-for="Backdrop" class="form-control" onclick="this.select();" />
                     <span asp-validation-for="Backdrop" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Trailer" class="control-label"></label>
-                    <input asp-for="Trailer" class="form-control" />
+                    <input asp-for="Trailer" class="form-control" onclick="this.select();" />
                     <span asp-validation-for="Trailer" class="text-danger"></span>
                 </div>
                 
