--- a/RentAMovie/wwwroot/css/moviesSingle.css
+++ b/RentAMovie/wwwroot/css/moviesSingle.css
@@ -136,10 +136,10 @@ body .container{
     font-size: 1.1rem;
 }
 
-.details-container{
+.details-container {
     margin-top: 10px;
     padding: 10px;
-    color: #0c0c0c;
+    color: #212529;
     display: flex;
     position: relative;
 }
@@ -165,12 +165,12 @@ body .container{
 .card-title a {
     width: 100%;
     text-decoration: none;
-    color: #0c0c0c;
+    color: #212529;
     font-weight: bold;
 }
 
 .card-title a:hover {
-    color: #0d6efd;
+    color: #0D4C92;
 }
 
 .media-scroller{
@@ -194,7 +194,7 @@ body .container{
 .media-scroller::-webkit-scrollbar-thumb {
     height: 2px;
     border-radius: 5px;
-    background-color: #6c757d;
+    background-color: #0D4C92;
 }
 
 .more-actors{
@@ -282,7 +282,7 @@ body .container{
 
 .review-content a {
     text-decoration: none !important;
-    color: #0c0c0c !important;
+    color: #212529 !important;
     font-weight: 500;
     margin-right: 10px;
 }
@@ -293,7 +293,7 @@ body .container{
 }
 
 .review-content a p:hover{
-    color: #0d6efd;
+    color: #0D4C92;
 }
 
 .header-controls {
@@ -315,21 +315,25 @@ body .container{
 .controls a{
     text-decoration: none !important;
     color: #f2f2f2 !important;
-    background-color: #0d6efd;
+    background-color: #0D4C92;
     font-weight: 500;
     font-size: 1.0rem;
     margin-right: 10px;
     border-radius: 0.25rem;
     padding: 8px;
+    transition: 100ms;
 }
 
 .controls a:hover{
-    background-color: #0058db;
+    background-color: #0079FF;
+}
+
+.more-actors a {
+    color: #0D4C92;
 }
 
 @media screen and (max-width: 990px) {
-    .container,
-    .main-container {
+    .container, .main-container {
         max-width: none;
         width: 100%;
         padding: 0;
