--- a/RentAMovie/wwwroot/css/personSingle.css
+++ b/RentAMovie/wwwroot/css/personSingle.css
@@ -5,7 +5,7 @@
 .main-section img {
     width: 280px;
     height: 420px;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
     margin-bottom: 10px;
 }
 
@@ -23,10 +23,11 @@
 }
 
 .biography p{
-    color: #0d6efd;
+    color: #0D4C92;
     font-weight: 500;
     cursor: pointer;
     margin: 0;
+    transition: 100ms;
 
     -webkit-touch-callout: none; 
     -webkit-user-select: none; 
@@ -35,6 +36,11 @@
     -ms-user-select: none; 
     user-select: none; 
 }
+
+.biography p:hover {
+    color: #0079FF;
+}
+
 .info-section h2 {
     margin-bottom: 0.8rem;
 }
@@ -53,8 +59,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #0a58ca;
-    opacity: 60%;
+    background-color: #0D4C92;
     z-index: -5;
     border-radius: 15px 15px 5px 5px;
 }
@@ -65,7 +70,7 @@
 }
 
 .details {
-    padding: 5px;
+    padding: 10px;
     color: #f2f2f2;
 }
 
