--- a/RentAMovie/wwwroot/css/profile.css
+++ b/RentAMovie/wwwroot/css/profile.css
@@ -42,7 +42,7 @@
 }
 
 .header-button-section p {
-    color: #0d6efd;
+    color: #0D4C92;
     cursor: pointer;
     margin: 0;
     font-weight: 500;
@@ -55,8 +55,12 @@
     user-select: none; 
 }
 
+.header-button-section p:hover {
+    color: #0079FF;
+}
+
 .header-button-section a {
-    color: #0d6efd;
+    color: #0D4C92;
     font-weight: 500;
     text-decoration: none;
 
@@ -66,6 +70,10 @@
     -moz-user-select: none; 
     -ms-user-select: none; 
     user-select: none; 
+}
+
+.header-button-section a:hover {
+    color: #0079FF;
 }
 
 .form-floating {
@@ -91,7 +99,7 @@
     right: 13px;
     top: 15px;
     cursor: pointer;
-    color: #0d6efd;
+    color: #0D4C92;
 
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -102,7 +110,7 @@
 }
 
 .change-link:hover {
-    color: #0d6efd;
+    color: #0079FF;
 }
 
 .uploaded-movies,
@@ -120,7 +128,7 @@
 .movie-item {
     width: 150px;
     margin-right: 5px;
-    background-color: #9ec5ff;
+    background-color: #0D4C92;
     border-radius: 5px;
 }
 
@@ -144,7 +152,7 @@
 .movie-info a {
     text-decoration: none;
     cursor: pointer;
-    color: #0a0a0a;
+    color: #f2f2f2;
 }
 
 .not-available {
@@ -189,7 +197,7 @@
 
 .review-content a {
     text-decoration: none !important;
-    color: #0c0c0c !important;
+    color: #212529 !important;
     font-weight: 500;
     margin-right: 10px;
 }
@@ -199,7 +207,7 @@
 }
 
 .review-content a p:hover {
-    color: #0d6efd;
+    color: #0D4C92;
 }
 
 .review-date {
@@ -225,6 +233,16 @@
     opacity: 80%;
     font-size: 0.9rem;
     margin: 0;
+}
+
+main form button[type="submit"] {
+    background-color: #0D4C92;
+    border: none;
+    transition: 100ms;
+}
+
+main form button[type="submit"]:hover {
+    background-color: #0079FF;
 }
 
 @media screen and (max-width: 473px) {
