--- a/RentAMovie/wwwroot/css/reviewSingle.css
+++ b/RentAMovie/wwwroot/css/reviewSingle.css
@@ -18,7 +18,7 @@
 }
 
 form input[type="submit"] {
-    color: #0c0c0c !important;
+    color: #212529 !important;
     background-color: #f2f2f2 !important;
     border-color: #f2f2f2 !important;
     border: none !important;
@@ -32,9 +32,10 @@ form input[type="submit"]:hover {
 }
 
 #back {
-    color: #0c0c0c;
+    color: #212529;
     font-weight: 500;
     text-decoration: none;
+    transition: 100ms;
 }
 
 #back p {
@@ -42,7 +43,7 @@ form input[type="submit"]:hover {
 }
 
 #back:hover {
-    color: #0d6efd !important;
+    color: #0D4C92 !important;
 }
 
 @media screen and (max-width: 570px) {
