Styling home page

--- a/RentAMovie/Views/_ViewImports.cshtml
+++ b/RentAMovie/Views/_ViewImports.cshtml
@@ -1,11 +1,12 @@
 ﻿@using RentAMovie
 @using RentAMovie.Models
-@using RentAMovie.Models.MovieModuls
-@using RentAMovie.Models.PersonModels
 @using RentAMovie.Models.Home
-@using RentAMovie.Models.Search
+@using RentAMovie.Models.MovieModuls
 @using RentAMovie.Models.Review
 @using RentAMovie.Models.Genre
+@using RentAMovie.Models.PersonModels
+@using RentAMovie.Models.Search
 @using RentAMovie.Data.Models
 @using RentAMovie.Data
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
