--- a/RentAMovie/Views/Home/Index.cshtml
+++ b/RentAMovie/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ViewIndexModel
+@inject SignInManager<User> SignInManager
 @{
     ViewData["Title"] = "Home";
     string posterPath = "https://image.tmdb.org/t/p/w1920_and_h800_multi_faces";
@@ -12,59 +13,80 @@
     }
 </div>
 
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+<div class="main-section">
+    <div class="main-section-item">
+        <h3>Explore from more than @(((int)Math.Round(Model.TotalMovies / 10.0)) * 10) movies</h3>
+        <a asp-controller="Movie" asp-action="Popular">See what's popular</a>
     </div>
-    <div class="carousel-inner">
-        @foreach (var movie in Model.TopActionMovies)
-        {
-            if (firstSlide == true)
-            {
-                firstSlide = false;
-                <div class="carousel-item active">
-                    <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-                        <div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
-                    </a>
-                    <div class="carousel-caption d-none d-md-block">
-                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-                            <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
-                        </a>
-                        <p>@movie.Description.Substring(0, 200)...</p>
-                    </div>
-                </div>
-            }
-            else
-            {
-                <div class="carousel-item">
-                    <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-                        <div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
-                    </a>
-                    <div class="carousel-caption d-none d-md-block">
-                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-                            <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
-                        </a>
-                        <p>@movie.Description.Substring(0, 200)...</p>
-                    </div>
-                </div>
-            }
-        }
+    <div class="main-section-item">
+        <h3>View and write reviews</h3>
+        <a asp-controller="Review" asp-action="AllUserReview">Your reviews</a>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
+    @if (!SignInManager.IsSignedIn(User))
+    {
+        <div class="main-section-item">
+            <h3>Don't have an account yet</h3>
+            <a asp-area="Identity" asp-page="/Account/Register">Join us</a>
+        </div>
+    }
 </div>
 
-<div class="statistics">
+<div class="carousel-section">
+    <h4>Top rated action movies</h4>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        </div>
+        <div class="carousel-inner">
+            @foreach (var movie in Model.TopActionMovies)
+            {
+                if (firstSlide == true)
+                {
+                    firstSlide = false;
+                    <div class="carousel-item active">
+                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                            <div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
+                        </a>
+                        <div class="carousel-caption d-none d-md-block">
+                            <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                                <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                            </a>
+                            <p>@movie.Description.Substring(0, 200)...</p>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    <div class="carousel-item">
+                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                            <div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
+                        </a>
+                        <div class="carousel-caption d-none d-md-block">
+                            <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                                <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                            </a>
+                            <p>@movie.Description.Substring(0, 200)...</p>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</div>
+
+@*<div class="statistics">
     <div class="statistics-item">
         <h5>Uploaded Movies</h5>
         <p>@Model.TotalMovies</p>
@@ -78,7 +100,7 @@
         <p>@Model.TotalUsers</p>
     </div>
     <span class="statistics-shadow"></span>
-</div>
+</div>*@
 
 @section Styles {
     <link rel="stylesheet" href="~/css/home.css" />
