--- a/RentAMovie/wwwroot/css/home.css
+++ b/RentAMovie/wwwroot/css/home.css
@@ -82,3 +82,51 @@
         background-position: -200% center;
     }
 }
+
+.main-section {
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.main-section-item {
+    background-color: #212529;
+    color: #f2f2f2;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.main-section-item h3{
+    margin: 0;
+}
+
+.main-section-item a{
+    padding: 9px;
+    background-color: #0D4C92;
+    border-radius: 10px;
+    text-decoration: none;
+    color: #f2f2f2;
+    transition: 100ms;
+}
+
+.main-section-item a:hover {
+    background-color: #0079FF;
+}
+
+.carousel-section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#carouselExampleCaptions {
+    margin: 0;
+    max-width: 800px;
+}
+
+.carousel-inner {
+    border-radius: 5px;
+}
