Implementing services for ReviewController

--- a/RentAMovie/Views/Search/Index.cshtml
+++ b/RentAMovie/Views/Search/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="search-bar">
 	<form method="get" autocomplete="off">
 		<div class="search">
-			<input asp-for="SearchTerm" class="form-control" />
+			<input asp-for="SearchTerm" class="form-control" placeholder="What are you looking for?"/>
 			<div class="search-btns">
 				<input type="submit" value="Search" class="btn btn-primary" />
 				<input type="submit" value="Reset" class="btn btn-secondary" />
