--- a/RentAMovie/Views/_ViewImports.cshtml
+++ b/RentAMovie/Views/_ViewImports.cshtml
@@ -8,5 +8,8 @@
 @using RentAMovie.Models.Search
 @using RentAMovie.Data.Models
 @using RentAMovie.Data
+@using RentAMovie.Services.Movie
 @using Microsoft.AspNetCore.Identity
+@using System.Security.Claims
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
