--- a/RentAMovie/Views/Movie/Create.cshtml
+++ b/RentAMovie/Views/Movie/Create.cshtml
@@ -8,7 +8,8 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script src="~/js/formMovie.js"></script>
+    <script src="~/js/movie/reviewForm.js"></script>
+    <script src="~/js/movie/form.js"></script>
 }
 @section Styles {
     <link rel="stylesheet" href="~/css/moviesCreate.css" />
