--- a/RentAMovie/wwwroot/css/profile.css
+++ b/RentAMovie/wwwroot/css/profile.css
@@ -121,7 +121,6 @@
 .movie-section {
     display: flex;
     justify-content: space-between;
-    text-align: center;
     overflow-y: hidden;
 }
 
@@ -132,6 +131,10 @@
     border-radius: 5px;
 }
 
+.movie-item:hover{
+    filter: brightness(90%);
+}
+
 .movie-item img {
     width: 100%;
     height: 276px;
@@ -139,14 +142,13 @@
     object-position: center;
     border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
     cursor: pointer;
-    border-radius: 5px 5px 0 0;
 }
 
 .movie-info {
     display: flex;
-    justify-content: center;
     align-items: center;
     padding: 10px;
+    word-wrap: anywhere;
 }
 
 .movie-info a {
@@ -204,10 +206,11 @@
 
 .review-content a p {
     margin: 0;
+    transition: 100ms;
 }
 
 .review-content a p:hover {
-    color: #0D4C92;
+    color: #0079FF;
 }
 
 .review-date {
