Creating a page for sources

--- a/RentAMovie/Views/Shared/_Layout.cshtml
+++ b/RentAMovie/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.UtcNow.Year - MoviesViewer
+            &copy; @DateTime.UtcNow.Year - MoviesViewer - <a asp-controller="Home" asp-action="Source">Sources</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
