--- a/RentAMovie/Views/Person/PersonTmdb.cshtml
+++ b/RentAMovie/Views/Person/PersonTmdb.cshtml
@@ -172,7 +172,7 @@
 </div>
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/personSingle.css" />
+    <link rel="stylesheet" href="~/css/person/personSingle.css" />
 }
 @section Scripts {
     <script src="~/js/personSingle.js"></script>
