--- a/RentAMovie/wwwroot/css/person/personSingle.css
+++ b/RentAMovie/wwwroot/css/person/personSingle.css
@@ -100,3 +100,39 @@
     -ms-user-select: none;
     user-select: none;
 }
+
+.movies {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    row-gap: 10px;
+}
+
+.movie-item {
+    max-width: 200px;
+    background-color: #0D4C92;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.movie-item:hover {
+    filter: brightness(90%);
+}
+
+.movie-item img {
+    width: 200px;
+    height: auto;
+}
+
+.movie-item a {
+    text-decoration: none;
+    color: #f2f2f2;
+}
+
+.movie-item a p{
+    margin-bottom: 10px;
+    word-wrap: anywhere;
+}
