Changing seeding for admin user to be in Program.cs; adding Admin panel button

--- a/RentAMovie/Views/_ViewImports.cshtml
+++ b/RentAMovie/Views/_ViewImports.cshtml
@@ -9,6 +9,7 @@
 @using RentAMovie.Data.Models
 @using RentAMovie.Data
 @using RentAMovie.Services.Movie
+@using RentAMovie.Infrastructure
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 
